--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,5 @@ JWT_EXPIRES_IN=60d
 API_URL=http://localhost:8000/v1
 FRONTEND_LOGIN_URL=http://localhost:3000/login
 DB_POOLSIZE=10
+EMAIL_USER=
+EMAIL_PASSWORD=
